--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         body {
             font-family: 'Montserrat', sans-serif;
         }
+        img {
+            max-width: 100%; /* Ajusta la imagen al ancho de la pantalla */
+            height: auto; /* Mantiene la proporción de la imagen */
+        }
     </style>
 </head>
 <body>
