--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Como consultor de BI y analista de datos, ayudo a las empresas a tomar decisiones basadas en datos y a optimizar sus operaciones mediante visualizaciones y análisis de datos. Estoy continuamente ampliando mis conocimientos y experiencia, con el objetivo de contribuir al campo de la ciencia de datos.
         </p>
         <p>
-            Te invito a explorar mi <a href="https://gonzadzz00.github.io/Proyectos/" target="_blank">repositorio</a> 📦 donde comparto mis proyectos. Si compartimos intereses o quieres hablar sobre datos, no dudes en conectarte conmigo. ¡Será un placer conversar!
+            Te invito a explorar mi <a href="https://github.com/gonzadzz00/Proyectos" target="_blank">repositorio</a> 📦 donde comparto mis proyectos. Si compartimos intereses o quieres hablar sobre datos, no dudes en conectarte conmigo. ¡Será un placer conversar!
         </p>
 
         <h1>💻 Tech Stack:</h1>
