--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
 <body>
     <div class="navbar">
         <a href="#mi-perfil">Mi Perfil</a>
-        <a href="#mis-proyectos">Mis Proyectos</a>
-        <a href="#mis-cursos">Mis Cursos</a>
+        <a href="#mis-proyectos">Proyectos</a>
+        <a href="#mis-cursos">Cursos y Certificaciones</a>
+        <a href="#mi-cv">Mi CV</a>
+        <a href="#contacto">Contacto</a>
     </div>
 
+    <img src="banner.jpg" alt="Banner" class="banner">
+
     <div id="mi-perfil">
+
+
         <h1>🎯 About Me:</h1>
         <p>
             ¡Hola! Soy Gonzalo, Analista de Datos y nacido en Argentina. Actualmente estoy cursando la Tecnicatura en Ciencia de Datos y perfeccionando mis habilidades en Machine Learning, Data Mining y Data Analytics. Tengo experiencia con herramientas como Power BI, Qlik Sense, Python y R.
@@ -103,6 +109,82 @@
     <div id="mis-cursos">
         <h1>Mis Cursos</h1> <!-- Título para la sección Mis Cursos -->
         
+        <h1>Certificación Profesional en Análisis de Datos de Google</h1>
+    <img src="google-data.png" alt="Certificación de Google en Análisis de Datos" width="150">
+
+    <h2>Resumen de la Certificación</h2>
+    <p>La certificación en análisis de datos de Google cubre los conceptos fundamentales del análisis de datos, incluyendo herramientas y técnicas para transformar datos en insights significativos. Está orientada a principiantes y proporciona habilidades prácticas aplicables en el mundo real.</p>
+
+    <h2>Descripción de los Cursos</h2>
+    <ol>
+        <li>
+            <strong>Fundamentos del Análisis de Datos:</strong>
+            Introducción a los conceptos básicos del análisis de datos, incluyendo el ciclo de vida de los datos y las habilidades necesarias para ser un analista de datos.
+        </li>
+        <li>
+            <strong>Habilidades de Preparación de Datos:</strong>
+            Se centra en la recopilación y limpieza de datos. Aprenderás a usar hojas de cálculo y SQL para organizar datos de manera efectiva.
+        </li>
+        <li>
+            <strong>Análisis de Datos en Excel:</strong>
+            Enseña a usar Excel para realizar análisis de datos, incluyendo fórmulas, gráficos y análisis de tendencias, para extraer insights valiosos.
+        </li>
+        <li>
+            <strong>Visualización de Datos:</strong>
+            Aprendes a crear visualizaciones efectivas utilizando herramientas como Tableau y Google Data Studio para comunicar hallazgos de manera clara y atractiva.
+        </li>
+        <li>
+            <strong>Análisis Predictivo:</strong>
+            Introducción a técnicas de análisis predictivo utilizando herramientas de análisis y algoritmos para hacer pronósticos basados en datos históricos.
+        </li>
+        <li>
+            <strong>Proyecto Final:</strong>
+            Un proyecto práctico donde aplicas todas las habilidades adquiridas en un estudio de caso real, creando un análisis completo que demuestre tu capacidad como analista de datos.
+        </li>
+    </ol>
+
+    <p><a href="https://coursera.org/share/cc48c32dd31845491480028e57ebffcc" target="_blank">Ver Certificado</a></p>
+    
+    <h1>Certificación Profesional en Análisis de Datos con Microsoft Power BI</h1>
+    <img src="power-bi-data.png" alt="Certificación de Microsoft Power BI" width="120">
+
+    <h2>Resumen de la Certificación</h2>
+    <p>La certificación en Análisis de Datos con Microsoft Power BI está diseñada para capacitar a los estudiantes en el uso de Power BI como herramienta para transformar datos en insights significativos. Se enfoca en el manejo de datos, la visualización y la creación de informes interactivos.</p>
+
+    <h2>Descripción de los Cursos</h2>
+    <ol>
+        <li>
+            <strong>Introducción a Power BI:</strong>
+            Proporciona una visión general de Power BI, su interfaz, y cómo conectar y cargar datos desde diferentes fuentes.
+        </li>
+        <li>
+            <strong>Preparación de Datos para el Análisis:</strong>
+            Se centra en la limpieza y transformación de datos utilizando Power Query para garantizar que los datos estén listos para el análisis.
+        </li>
+        <li>
+            <strong>Visualización de Datos:</strong>
+            Enseña a crear visualizaciones interactivas y a utilizar gráficos y tablas para representar datos de manera efectiva en Power BI.
+        </li>
+        <li>
+            <strong>Modelado de Datos:</strong>
+            Introducción a la creación de modelos de datos, incluyendo relaciones y cálculos, utilizando DAX (Data Analysis Expressions).
+        </li>
+        <li>
+            <strong>Creación de Informes y Dashboards:</strong>
+            Aprendes a diseñar informes y dashboards interactivos en Power BI para comunicar resultados a diferentes audiencias.
+        </li>
+        <li>
+            <strong>Compartir y Colaborar:</strong>
+            Este curso aborda cómo compartir y colaborar en informes y dashboards utilizando el servicio en línea de Power BI.
+        </li>
+        <li>
+            <strong>Proyecto Final:</strong>
+            Aplicación de las habilidades adquiridas en un proyecto práctico que consiste en el desarrollo de un informe y un dashboard de Power BI a partir de un conjunto de datos real.
+        </li>
+    </ol>
+
+    <p><a href="https://coursera.org/share/22e0248ed8e190da2ca607523870ba26" target="_blank">Ver Certificado</a></p>
+
         <h1>DataTalks - Machine Learning Zoomcamp 2024</h1>
         <img src="https://github.com/user-attachments/assets/f75c598c-4f14-4734-879a-fa432227ea6b" alt="Image">
 
