--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <li><a href="https://github.com/gonzadzz00/DataTalks/blob/main/1-Homework-Introduction.ipynb">Introducción al Aprendizaje Automático</a></li>
             <li><a href="https://github.com/gonzadzz00/DataTalks/blob/main/2-Homework-Machine-Learning-for-Regression.ipynb">Aprendizaje Automático para Regresión</a></li>
             <li><a href="https://github.com/gonzadzz00/DataTalks/blob/main/3-Homework-Machine-Learning-for-Classification.ipynb">Aprendizaje Automático para Clasificación</a></li>
-            <li><a href="#evaluation-metrics-for-classification">Métricas de Evaluación para Clasificación</a></li>
+            <li><a href="https://github.com/gonzadzz00/DataTalks/blob/main/4-Homework-Evaluation-Metrics-for-Classification.ipynb">Métricas de Evaluación para Clasificación</a></li>
             <li><a href="#deploying-machine-learning-models">Despliegue de Modelos de Aprendizaje Automático</a></li>
             <li><a href="#decision-trees-and-ensemble-learning">Árboles de Decisión y Aprendizaje por Conjuntos</a></li>
             <li><a href="#neural-networks-and-deep-learning">Redes Neuronales y Aprendizaje Profundo</a></li>
