UPDATE Nuevo Proyecto + Carrusel

--- a/index.html
+++ b/index.html
@@ -139,10 +139,22 @@
         </a>
         </div>
                      
-        <h3>Proyecto 2: Proceso ETL </h3>
-        
+        <h3>Proyecto 2: Caso de Negocio + Business Experimentation </h3>
+
+        <p>Una empresa de retail nacional, líder en la venta de productos electrónicos, ha decidido expandirse a nuevos mercados regionales. Actualmente opera en cinco ciudades principales y desea extender su presencia a tres nuevas ciudades donde aún no tiene operaciones. La dirección necesita una estrategia basada en datos para maximizar la rentabilidad y minimizar 
+            los riesgos asociados con esta expansión. El objetivo es desarrollar una propuesta integral para la expansión, que combine los modelos analíticos para optimizar la toma de decisiones</p>
+        <div class="carousel" id="carousel3">
+            <button class="carousel-control prev" onclick="prevImage3()">&#10094;</button>
+            <div class="carousel-images">
+                <img src="icon/img1 - td.jpg" alt="Descripción de la imagen 1">
+                <img src="icon/img2 - td.jpg" alt="Descripción de la imagen 2">
+                <img src="icon/img3 - td.jpg" alt="Descripción de la imagen 3">
+            </div>
+            <button class="carousel-control next" onclick="nextImage3()">&#10095;</button>
+        </div>
+
         <div class="button-container">
-            <a href="https://github.com/gonzadzz00/Proyectos/blob/main/%23Proyecto2%3A%20SQL%20Data%20Consulting/README.md" target="_blank" class="github-button">
+            <a href="https://app.luminpdf.com/es/viewer/674a470adc255e3d51d8d5c8" target="_blank" class="github-button">
                 <i class="fa fa-github"></i>
                 Ver Proyecto
             </a>
