--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
     <title>Portfolio | Gonzalo Diaz</title>
     
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Tu propio CSS (mantiene prioridad sobre Bootstrap) -->
     <link rel="stylesheet" href="styles.css">
 
     <link rel="icon" type="image/svg+xml" href="icon/logo gon ultimos-01.svg">
@@ -26,7 +30,7 @@
     <!-- =================== PORTADA =================== -->
     <header class="header">
         <div class="animated-title">
-            <h1 class="title-text">Gonzalo Diaz | Data Analyst</h1>
+            <h1 class="title-text">Gonzalo Diaz | Data Science</h1>
         </div>
         <img src="icon/Portada-Gon fn_mesa de trabajo dos, portada Gon.svg" alt="Portada" class="header-image">
     </header>
@@ -76,6 +80,10 @@
         <p>
             Estoy orientando mi perfil profesional hacia el rol de <strong>Analytics Engineer</strong>. En esta función, no solo analizo datos, sino que transformo y preparo conjuntos de datos limpios y confiables, aplicando buenas prácticas de ingeniería como control de versiones, testing automatizado y documentación clara, para que otros usuarios puedan responder sus propias preguntas con confianza.
         </p>
+        <p>
+        Además, me estoy desarrollando en el campo de Machine Learning Engineering, enfocándome en el diseño, entrenamiento y despliegue de modelos predictivos escalables,  con el objetivo de llevar las soluciones de IA desde la experimentación hasta entornos productivos.
+        </p>
+        Mi objetivo profesional es seguir creciendo como un perfil híbrido de datos capaz de conectar la analítica, el software y la infraestructura para construir soluciones eficientes, reproducibles y orientadas al impacto real en el negocio.
         <p>
             Te invito a explorar mi repositorio donde comparto mis proyectos. Si compartimos intereses o quieres hablar sobre datos, no dudes en conectarte conmigo. ¡Será un placer conversar!
         </p>
@@ -557,6 +565,10 @@
         font-family: 'ProggyClean', monospace !important;
     }
     </style>
+
+    <!-- Bootstrap JS (incluye Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 </html>
